Release Notes 
=============

==== Jena 2.7.3

+ Remnove unused: GramMemSmal, MixedGraphMem and GraphMem (in-memory is GraphMemFaster).   

==== Jena 2.7.2

(maintainence to other modules)

==== Jena 2.7.1

+ Fix timezone calculation during transition to/from DST.  (JENA-247)
+ Rename c.h.h.j.graph.Query as c.h.h.j.graph.GraphQuery (not related to SPARQL)  
+ remove out-of-date resultSet vocabulary class
+ icu4j dependency removed (JENA-177)
+ xml / xmlns namespaces issues on write fixed (JENA-24)

==== Jena 2.6.5 / 2.7.0

** Java 6 is now required for running Jena.
** The deprecated RDB subsystem has been removed.  Please use TDB or SDB.

==== Jena 2.6.4

+ Maintenace release

==== Jena 2.6.3

GraphBase:
   o Added limits to the number of triples thatr GraphBase.toString() will
     serialise.

Model/Resource API:
   o Took advantage of covariant return types to allow Resource.inModel() and
     Property.inModel() to have Resource resp. Property return types, allowing
     casts of calls to inModel() to (mostly) be eliminated.

   o As per request on mailing list, ModelGraphInterface now has a method
     `Resource wrapAsResource(Node)` [name changed to fit better] which
     wraps a node as a Resource and throws if the node is a Literal.

    o As per request on mailing list, added Resource method
        x.getPropertyResourceValue( Property p )
      which answers some R such that x p R if any exists, otherwise null

    o As per request on mailing list, there's now an OWL2 vocabulary class
      with constants for the terms of OWL2. NOTE: there is no OWL2 ontology
      support present or implied by this vocabulary class.

    o getModel() has been pulled up from Resource to RDFNode. This means that
      Literal now supports getModel() and inModel().

    o RDFNode has .asLiteral() and .asResource() methods, which deliver
      the Literal or Resource respectively if the RDF Node has that type,
      and otherwise throw a *RequiredException.

Misc: